<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:weather="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/mi_search_cities"
        android:icon="@drawable/search"
        android:title="@string/mi_search_title"
        weather:actionViewClass="android.support.v7.widget.SearchView"
        weather:showAsAction="always"/>
    <item
        android:id="@+id/mi_main_submenu"
        android:icon="@drawable/overflow"
        android:title="@string/mi_submenu_title"
        weather:showAsAction="always">
        <menu>
            <item
                android:id="@+id/mi_city_management"
                android:icon="@drawable/colosseum"
                android:title="@string/mi_city_management_title"
                weather:showAsAction="never"/>
            <item
                android:id="@+id/mi_settings"
                android:icon="@drawable/settings"
                android:title="@string/mi_settings_title"
                weather:showAsAction="never"/>
            <item
                android:id="@+id/mi_rate_application"
                android:icon="@drawable/star"
                android:title="@string/mi_rate_application_title"
                weather:showAsAction="never"/>
            <item
                android:id="@+id/mi_about"
                android:icon="@drawable/about"
                android:title="@string/mi_about_program_title"
                weather:showAsAction="never"/>
        </menu>
    </item>

</menu>